--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-us">
+<html lang="ch-ZN">
   <head>
     <title>sheeppeach</title>
     <link rel="shortcut icon" href="/favicon.ico" />
