--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ch-ZN">
+<html lang="ch-zn">
   <head>
     <title>404 Page not found // sheeppeach</title>
     <link rel="shortcut icon" href="/favicon.ico" />
